--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
     "type": "postgres",
-    "host": "localhost",
+    "host": "database",
     "port": 5432,
-    "username": "willianbrandao",
-    "password": "",
-    "database": "nest_db",
+    "username": "willian",
+    "password": "admin",
+    "database": "nestdb",
     "entities": ["dist/**/*.entity{.ts,.js}"],
     "synchronize": true
   }
